--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "express-validator": "^6.7.0",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
   }
 }
